# onnxruntime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sample_model.py
include/: onnx.proto3.pb.cc  onnx.proto3.pb.h
test/: test_main.cpp
